--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
             />
             <div class="like"><i class="fa-solid fa-heart"></i></div>
             <a href="pages/Belgian_Waffles.html">
-              <span class="title">Crispy Belgian Waffles</span>
+              <span class="title">Crispy Waffles</span>
               <div class="mainIngredients">
                 <span class="heading">Main Ingredients:</span>
                 <div class="mainIngredientList">
