--- a/pages/Belgian_Waffles.html
+++ b/pages/Belgian_Waffles.html
@@ -80,7 +80,7 @@
       <section class="wrapper hidden">
         <section class="recipeHeader">
           <div class="recipeDetail">
-            <h1>Crispy Belgian Waffles</h1>
+            <h1>Crispy Waffles</h1>
             <div class="timeAndType">
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
@@ -135,10 +135,10 @@
 
         <section class="description">
           <p>
-            Crispy Belgian waffles are a delicious breakfast treat. Light and
-            crispy on the outside, with a soft, airy inside, they are perfect
-            when topped with fruits, whipped cream, or syrup. This simple recipe
-            will help you make perfect waffles every time!
+            Crispy waffles are a delicious breakfast treat. Light and crispy on
+            the outside, with a soft, airy inside, they are perfect when topped
+            with fruits, whipped cream, or syrup. This simple recipe will help
+            you make perfect waffles every time!
           </p>
         </section>
 
