--- a/pages/French_Toast.html
+++ b/pages/French_Toast.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="recipe from all variety of types and cultures"
+      content="Golden French toast with fresh berries and sweet syrup"
     />
-    <title>French Toast</title>
+    <title>French Toast with Berries & Syrup</title>
     <link rel="icon" type="svg" href="../images/icons/black cooking hat.svg" />
     <link
       rel="icon"
@@ -82,7 +82,7 @@
       <section class="wrapper hidden">
         <section class="recipeHeader">
           <div class="recipeDetail">
-            <h1>Cinnamon French Toast</h1>
+            <h1>French Toast with Berries & Syrup</h1>
             <div class="timeAndType">
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
@@ -105,39 +105,40 @@
         <section class="imageAndNutrition">
           <img
             src="../images/food_samples/French_Toast.webp"
-            alt="French Toast"
+            alt="French Toast with fresh berries and syrup"
           />
           <div class="nutrition">
             <h4>Nutrition Information</h4>
             <table>
               <tr>
                 <td>Calories</td>
-                <td style="text-align: right">250 kcal</td>
+                <td style="text-align: right">300 kcal</td>
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">8 g</td>
+                <td style="text-align: right">9 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
-                <td style="text-align: right">10 g</td>
+                <td style="text-align: right">11 g</td>
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">35 g</td>
+                <td style="text-align: right">40 g</td>
               </tr>
               <tr>
-                <td>Cholesterol</td>
-                <td style="text-align: right">150 mg</td>
+                <td>Fiber</td>
+                <td style="text-align: right">3 g</td>
               </tr>
             </table>
           </div>
         </section>
         <section class="description">
           <p>
-            Thick slices of bread soaked in a rich cinnamon-vanilla custard,
-            cooked to golden perfection. A classic breakfast dish that’s crispy
-            on the outside and custardy on the inside.
+            Fluffy cinnamon French toast cooked to golden perfection, topped
+            with a vibrant mix of fresh berries and drizzled with warm maple
+            syrup. Perfect combination of crispy edges, custardy center, and
+            fresh fruity flavors.
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -146,14 +147,14 @@
             <form>
               <label
                 ><input type="checkbox" class="customCheckbox" /> 4 thick slices
-                of brioche bread</label
+                brioche bread</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 3 large
                 eggs</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> ½ cup (120ml)
+                ><input type="checkbox" class="customCheckbox" /> ½ cup
                 milk</label
               ><br />
               <label
@@ -161,16 +162,24 @@
                 extract</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tsp ground
+                ><input type="checkbox" class="customCheckbox" /> 1 tsp
                 cinnamon</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 2 tbsp
-                unsalted butter</label
+                butter</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> Maple syrup
-                for serving</label
+                ><input type="checkbox" class="customCheckbox" /> 1 cup mixed
+                berries (strawberries, blueberries, raspberries)</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> ¼ cup maple
+                syrup</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> Powdered sugar
+                for dusting</label
               ><br />
             </form>
           </div>
@@ -264,25 +273,34 @@
           <div class="instructions">
             <h2>Instructions</h2>
             <dl>
-              <dt>1. Prepare the Custard</dt>
+              <dt>1. Make Custard Mixture</dt>
               <dd>
-                In a shallow bowl, whisk together eggs, milk, vanilla extract,
-                and cinnamon until smooth.
+                In a shallow dish, whisk together eggs, milk, vanilla, and
+                cinnamon until fully combined.
               </dd>
-              <dt>2. Soak the Bread</dt>
+
+              <dt>2. Soak Bread Slices</dt>
               <dd>
-                Dip each slice of bread into the custard mixture, allowing it to
-                soak for 20-30 seconds per side.
+                Dip each bread slice in the mixture, letting it soak for 30
+                seconds per side until fully coated.
               </dd>
-              <dt>3. Cook the Toast</dt>
+
+              <dt>3. Cook to Golden Brown</dt>
               <dd>
-                Melt butter in a skillet over medium heat. Cook the soaked bread
-                for 3-4 minutes per side until golden brown.
+                Melt butter in a non-stick pan over medium heat. Cook toast 3-4
+                minutes per side until golden and crispy.
               </dd>
-              <dt>4. Serve</dt>
+
+              <dt>4. Add Toppings</dt>
               <dd>
-                Serve warm with maple syrup, fresh berries, or a dusting of
-                powdered sugar.
+                Stack French toast slices, top with fresh berries, drizzle with
+                warm maple syrup, and dust with powdered sugar.
+              </dd>
+
+              <dt>5. Serve Immediately</dt>
+              <dd>
+                Best served warm while the toast is crispy and berries are
+                fresh.
               </dd>
             </dl>
           </div>
